fix tooltip z-index

--- a/src/scripts/OSUIFramework/Pattern/Tooltip/scss/_tooltip.scss
+++ b/src/scripts/OSUIFramework/Pattern/Tooltip/scss/_tooltip.scss
@@ -118,7 +118,7 @@ $osui-tooltip-arrow-size: 9px;
 		position: absolute;
 		top: 100%;
 		transition: opacity 0.25s;
-		z-index: 1;
+		z-index: 2;
 
 		// Service Studio Preview
 		& {
